--- a/src/index.css
+++ b/src/index.css
@@ -1,6 +1,11 @@
 * {
     box-sizing: border-box;
     max-width: 100%;
+    -webkit-user-select:none;
+    -khtml-user-select:none;
+    -moz-user-select:none;
+    -ms-user-select:none;
+    user-select:none;
 }
 
 html,body {
