--- a/src/index.css
+++ b/src/index.css
@@ -7,6 +7,13 @@
     -ms-user-select:none;
     user-select:none;
 }
+input, input:before, input:after {
+    -webkit-user-select: initial;
+    -khtml-user-select: initial;
+    -moz-user-select: initial;
+    -ms-user-select: initial;
+    user-select: initial;
+}
 
 html,body {
     min-height: 100vh;
